# NecroVC

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ThidpartyLicense.txt
Misc/: win_version_x64.rc  win_version_x86.rc
NecroVC/: API.lua  Microphone.lua  NecroVC.lua  README  Speaker.lua  mod.json
Source/: AudioCapture.c  AudioCapture.h  AudioPlayback.c  AudioPlayback.h  Context.c  Context.h  EncRingBuf.c  EncRingBuf.h  NecroVC.c  NecroVC.h  PcmRingBuf.c  PcmRingBuf.h  Position.h  Utilities.h
